# graphql-example

./: Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml  run.py
app/: config.py  fields.py  main.py  mutations.py  query.py  utils.py
app/models/: schema.py
migrations/: env.py
migrations/versions/: bcbf05b5485c_init_revision.py
tests/: conftest.py  test_db.py  test_utils.py
